# xuanwu

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
easyloggingpp/: CMakeLists.txt  easylogging++.h
include/: xuanwu.cuh  xuanwu.hpp
include/xuanwu/: Allocator.h  AllocatorBase.h  Array.h  Car.h  Config.h  Context.h  Data.h  DataCopy.h  Device.h  DeviceBase.h  DevicesGroup.h  Engine.h  Event.h  MM.h  Matrix.h  Ptr.h  Runnable.h  Task.h  Timeline.h  Worker.h  Xuanwu.h  defs.h  lru.h  xuanwu.hpp
include/xuanwu/dmr/: Algorithm.h  AlltoAllDMR.h  Kernels.cuh  PartitionedDMR.h  array_constructor.h  dmr.cuh  dmr.h
include/xuanwu/numas/: NumaDevice.h  NumaWorker.h  numas.h
src/: Allocator.cpp  Array.cpp  CMakeLists.txt  Car.cpp  Context.cpp  Data.cpp  DataCopy.cpp  Device.cpp  DevicesGroup.cpp  Engine.cpp  Event.cpp  MM.cpp  Ptr.cpp  Scheduler.cpp  Task.cpp  Timeline.cpp  Worker.cpp  Xuanwu.cpp  clock.cc  clock.h  logs.cpp
src/cuda_utils/: CMakeLists.txt  cuda_utils.cu  cuda_utils.h
src/numas/: NumaDevice.cpp  NumaWorker.cpp
test/: CMakeLists.txt  Kernels.cu  Kernels.h  logging.conf  run_test_dmr.cu  run_test_xuanwu.cpp  test_dmr.cu
